--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@types/react-dom": "^18.0.0",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.0",
+    "eslint-config-prettier": "^8.5.0",
+    "prettier": "2.7.1",
     "prisma": "^4.0.0",
     "typescript": "4.7.4"
   }
