--- a/package.json
+++ b/package.json
@@ -14,13 +14,19 @@
     "@emotion/styled": "11",
     "@next-auth/prisma-adapter": "^1.0.3",
     "@prisma/client": "^4.0.0",
+    "@trpc/client": "^9.26.2",
+    "@trpc/next": "^9.26.2",
+    "@trpc/react": "^9.26.2",
+    "@trpc/server": "^9.26.2",
     "framer-motion": "6",
     "next": "12.2.0",
     "next-auth": "^4.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.3.1",
-    "swr": "^1.3.0"
+    "react-query": "3",
+    "superjson": "^1.9.1",
+    "zod": "^3.17.10"
   },
   "devDependencies": {
     "@types/node": "18.0.1",
@@ -35,3 +41,4 @@
   },
   "packageManager": "yarn@3.2.1"
 }
+
