--- a/.gitignore
+++ b/.gitignore
@@ -104,6 +104,7 @@ typings/
 
 # Yarn Integrity file
 .yarn-integrity
+.yarn/
 
 # dotenv environment variables file
 .env
@@ -139,3 +140,6 @@ dist
 
 # TernJS port file
 .tern-port
+
+#VScode cache 
+.vscode/
