--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@emotion/react": "11.9.3",
     "@emotion/styled": "11.9.3",
     "@next-auth/prisma-adapter": "^1.0.4",
-    "@prisma/client": "^4.0.0",
+    "@prisma/client": "^4.1.1",
     "@trpc/client": "^9.26.2",
     "@trpc/next": "^9.26.2",
     "@trpc/react": "^9.26.2",
@@ -27,6 +27,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-query": "3.39.2",
+    "sha.js": "^2.4.11",
     "superjson": "^1.9.1",
     "zod": "^3.17.10"
   },
@@ -38,9 +39,8 @@
     "eslint-config-next": "12.2.3",
     "eslint-config-prettier": "^8.5.0",
     "prettier": "2.7.1",
-    "prisma": "^4.0.0",
+    "prisma": "^4.1.1",
     "ts-node": "^10.9.1",
     "typescript": "4.7.4"
   }
 }
-
