--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/react": "^2.2.4",
     "@emotion/react": "11.9.3",
     "@emotion/styled": "11.9.3",
+    "@formkit/auto-animate": "1.0.0-beta.1",
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.1.1",
     "@trpc/client": "^9.26.2",
