--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
     "@trpc/react": "^9.26.2",
     "@trpc/server": "^9.26.2",
     "framer-motion": "6.5.1",
+    "nanoid": "^4.0.0",
     "next": "12.2.3",
     "next-auth": "^4.10.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-query": "3.39.2",
-    "sha.js": "^2.4.11",
     "superjson": "^1.9.1",
     "zod": "^3.17.10"
   },
