--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-icons": "^4.4.0",
     "react-query": "3.39.2",
     "superjson": "^1.9.1",
-    "zod": "^3.17.10"
+    "zod": "^3.17.10",
+    "zustand": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "18.6.1",
